<resources>
    <string name="app_name">Nouari3A</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Bienvenue">Bienvenue sur mon application</string>
    <string name="auteur">Edité par NOUARI Achraf</string>
    <string name="Menu">Menu</string>
    <string name="description">description</string>
    <string name="choix1">choix1</string>
    <string name="choix2">choix2</string>
    <string name="choix3">choix3</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="error_generic">Oups ! Une erreur est survenue</string>
</resources>